--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -5058,7 +5058,7 @@ select {
 
 .feature-box-style1 {
   position: relative;
-  background: #ad836a;
+  background: #3E3D47;
   padding: 30px 30px 25px 30px;
   margin-bottom: 20px;
   overflow: hidden;
@@ -6492,7 +6492,7 @@ select {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: #ad836ab8;
+  background-color: #3E3D47b8;
   border-radius: 50%;
   animation: pulse-border-2 1s ease-out infinite;
   z-index: 0;
