--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -91,13 +91,13 @@
   --primary-color3-rgb: 51, 214, 135;
   --primary-color4: #FAB758;
   --primary-color4-rgb: 250, 183, 88;
-  --secondary-color: #F2CCB6;
+  --secondary-color: #3E3D47;
   --secondary-color-rgb: 37, 37, 49;
   --secondary-color2: #353666;
   --secondary-color2-rgb: 37, 37, 49;
   --text-white: #ffffff;
   --text-black: #303031;
-  --text-gray: #7A7A7A;
+  --text-gray: #3E3D47;
   --text-blue: #447BDE;
   --text-light-gray: #a7a8b4;
   --text-silver: #f5f3f1;
