--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -1349,13 +1349,14 @@ div[class*='kursor'].kursor--1.kursor--down {
     align-items: center;
     justify-content: center;
     height: 48px;
-    width: 48px;
+    width: 150px;
     background-color: var(--primary-color);
-    border-radius: 50%;
     color: #fff;
     font-size: 18px;
     -webkit-transition: all 500ms ease;
     transition: all 500ms ease;
+    padding: 5px !important;
+    color: #fff !important;
 }
 
 .header-style-01 .main-menu .main-menu-wrapper .main-menu-right .header-contact-info .header-contact-info-text {
@@ -1375,7 +1376,6 @@ div[class*='kursor'].kursor--1.kursor--down {
 }
 
 .header-style-01 .main-menu .main-menu-wrapper .main-menu-right .header-contact-info .header-contact-info-text .phone-no a {
-    color: var(--text-black);
     -webkit-transition: all 500ms ease;
     transition: all 500ms ease;
 }
@@ -3122,6 +3122,7 @@ div[class*='kursor'].kursor--1.kursor--down {
 .home_banner_01 {
     position: relative;
     overflow: hidden;
+    margin-top: 7% !important;
 }
 
 @media screen and (max-width: 425px) {
@@ -11285,7 +11286,10 @@ select {
     text-transform: capitalize !important;
 }
 
-
+.animate-btn-style3 {
+    color: #fff !important;
+    background: var(--primary-color);
+}
 
 
 @media (max-width: 576px) {
@@ -11298,6 +11302,7 @@ select {
         flex: 0 0 auto;
         width: 33.33333333%
     }
+
     .service-style1 {
         background-color: #ffffff;
         margin-bottom: 30px;
@@ -11309,6 +11314,62 @@ select {
         max-height: 60% !important;
     }
 
+    .home-carousel-title {
+        font-size: 20px !important;
+        position: relative;
+        display: block;
+        line-height: 22px !important;
+        font-weight: 900;
+        text-transform: uppercase;
+        margin-bottom: 15px;
+        opacity: 0;
+        max-width: 680px;
+        z-index: 11;
+        color: #fff;
+        -moz-transform: translateY(100px);
+        -o-transform: translateY(100px);
+        -ms-transform: translateY(100px);
+        -webkit-transform: translateY(100px);
+        transform: translateY(100px);
+        -moz-transition: all 1000ms ease;
+        -webkit-transition: all 1000ms ease;
+        -ms-transition: all 1000ms ease;
+        -o-transition: all 1000ms ease;
+        transition: all 1000ms ease;
+        font-family: var(--body-font);
+        text-align: left !important;
+        width: 50% !important;
+    }
+
+    .home_banner_01 .home-carousel .active .auto-container .content-box .btn-box {
+        float: left !important;
+    }
+
+    .animate-btn-style3 {
+        position: relative;
+        display: inline-block;
+        color: #fff;
+        background: var(--primary-color);
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 500;
+        z-index: 1;
+        letter-spacing: 1px;
+        border: 1px solid var(--primary-color);
+        -moz-transition: all 300ms ease-out 0s;
+        -webkit-transition: all 300ms ease-out 0s;
+        -ms-transition: all 300ms ease-out 0s;
+        -o-transition: all 300ms ease-out 0s;
+        transition: all 300ms ease-out 0s;
+        font-family: var(--body-font);
+        padding: 5px 16px;
+        font-size: 12px;
+    }
+
+    .footer, a {
+        color: var(--footer-text-color);
+    }
 }
+
 
 /*# sourceMappingURL=style.css.map */
