--- a/public/user_assets/fonts/webexthemeicon/style.css
+++ b/public/user_assets/fonts/webexthemeicon/style.css
@@ -1,270 +1,443 @@
 @font-face {
-  font-family: 'webexthemeicon';
-  src:  url('fonts/webexthemeicon.eot?i5l1nl');
-  src:  url('fonts/webexthemeicon.eot?i5l1nl#iefix') format('embedded-opentype'),
-    url('fonts/webexthemeicon.ttf?i5l1nl') format('truetype'),
-    url('fonts/webexthemeicon.woff?i5l1nl') format('woff'),
-    url('fonts/webexthemeicon.svg?i5l1nl#webexthemeicon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+    font-family: 'webexthemeicon';
+    src: url('fonts/webexthemeicon.eot?i5l1nl');
+    src: url('fonts/webexthemeicon.eot?i5l1nl#iefix') format('embedded-opentype'),
+        url('fonts/webexthemeicon.ttf?i5l1nl') format('truetype'),
+        url('fonts/webexthemeicon.woff?i5l1nl') format('woff'),
+        url('fonts/webexthemeicon.svg?i5l1nl#webexthemeicon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
 [class^="webextheme-icon-"], [class*=" webextheme-icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'webexthemeicon' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'webexthemeicon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .webextheme-icon-helmet:before {
-  content: "\f145";
+    content: "\f145";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-set-square:before {
-  content: "\f187";
+    content: "\f187";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-surgery-room:before {
-  content: "\f197";
+    content: "\f197";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-worker:before {
-  content: "\f1a5";
+    content: "\f1a5";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-wrench:before {
-  content: "\f1a8";
+    content: "\f1a8";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-art-and-design-1:before {
-  content: "\e900";
+    content: "\e900";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-tools-1:before {
-  content: "\e901";
+    content: "\e901";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-002-furnitures1:before {
-  content: "\f167";
+    content: "\f167";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-003-renovation1:before {
-  content: "\f168";
+    content: "\f168";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-008-concept1:before {
-  content: "\f16d";
+    content: "\f16d";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-013-sketch1:before {
-  content: "\f172";
+    content: "\f172";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-016-sketch-11:before {
-  content: "\f175";
+    content: "\f175";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-019-architect-11:before {
-  content: "\f177";
+    content: "\f177";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-architect-1:before {
-  content: "\f103";
+    content: "\f103";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-architect-2:before {
-  content: "\f104";
+    content: "\f104";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-architect-3:before {
-  content: "\f105";
+    content: "\f105";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-architect-4:before {
-  content: "\f106";
+    content: "\f106";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
+.webextheme-icon-light-architect-4:before {
+    content: "\f106";
+}
+
 .webextheme-icon-architect:before {
-  content: "\f107";
+    content: "\f107";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-armchair:before {
-  content: "\f108";
+    content: "\f108";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-blueprint:before {
-  content: "\f109";
+    content: "\f109";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-building:before {
-  content: "\f10a";
+    content: "\f10a";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-buildings:before {
-  content: "\f10b";
+    content: "\f10b";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-decorating:before {
-  content: "\f113";
+    content: "\f113";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-design:before {
-  content: "\f114";
+    content: "\f114";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-furniture:before {
-  content: "\f11e";
+    content: "\f11e";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-furnitures:before {
-  content: "\f11f";
+    content: "\f11f";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-home:before {
-  content: "\f120";
+    content: "\f120";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-house-design:before {
-  content: "\f121";
+    content: "\f121";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-import:before {
-  content: "\f122";
+    content: "\f122";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-interior-design-1:before {
-  content: "\f123";
+    content: "\f123";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
+.webextheme-icon-light-interior-design-1:before {
+    content: "\f123";
+}
+
 .webextheme-icon-interior-design-2:before {
-  content: "\f124";
+    content: "\f124";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-interior-design:before {
-  content: "\f125";
+    content: "\f125";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-interior:before {
-  content: "\f126";
+    content: "\f126";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-kitchen:before {
-  content: "\f127";
+    content: "\f127";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-living-room:before {
-  content: "\f129";
+    content: "\f129";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
+.webextheme-icon-light-measure:before {
+    content: "\f12a";
+}
+
 .webextheme-icon-measure:before {
-  content: "\f12a";
+    content: "\f12a";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-sofa:before {
-  content: "\f135";
+    content: "\f135";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-stairs:before {
-  content: "\f136";
+    content: "\f136";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-under-construction-1:before {
-  content: "\f138";
+    content: "\f138";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-sofa-1:before {
-  content: "\e90a";
+    content: "\e90a";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-stairs-1:before {
-  content: "\e90b";
+    content: "\e90b";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-team-1:before {
-  content: "\e90c";
+    content: "\e90c";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-apartment-1:before {
-  content: "\f10c";
+    content: "\f10c";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-apartment:before {
-  content: "\f10d";
+    content: "\f10d";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-armchair1:before {
-  content: "\f10e";
+    content: "\f10e";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-bathtub:before {
-  content: "\f10f";
+    content: "\f10f";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-bed-1:before {
-  content: "\f110";
+    content: "\f110";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-bed:before {
-  content: "\f111";
+    content: "\f111";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-clean:before {
-  content: "\f115";
+    content: "\f115";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-double-bed:before {
-  content: "\f119";
+    content: "\f119";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-excavator:before {
-  content: "\f15a";
+    content: "\f15a";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-office:before {
-  content: "\f15b";
+    content: "\f15b";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-pencil:before {
-  content: "\f15c";
+    content: "\f15c";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-square-shape-design-interface-tool-symbol:before {
-  content: "\f155";
+    content: "\f155";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-toilet:before {
-  content: "\f159";
+    content: "\f159";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-bed-1-1:before {
-  content: "\e902";
+    content: "\e902";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-home-1-1:before {
-  content: "\e903";
+    content: "\e903";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-home-2-1:before {
-  content: "\e904";
+    content: "\e904";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-office-1:before {
-  content: "\e905";
+    content: "\e905";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-wallpaper:before {
-  content: "\e906";
+    content: "\e906";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-wallpaper-6:before {
-  content: "\e913";
+    content: "\e913";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-house:before {
-  content: "\e917";
+    content: "\e917";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-furnitures1:before {
-  content: "\e91f";
+    content: "\e91f";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-001-workspace:before {
-  content: "\f15f";
+    content: "\f15f";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-002-living-room:before {
-  content: "\f102";
+    content: "\f102";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-003-staircase:before {
-  content: "\f160";
+    content: "\f160";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-004-blueprint:before {
-  content: "\f112";
+    content: "\f112";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-005-home-decoration:before {
-  content: "\f116";
+    content: "\f116";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-006-decorating:before {
-  content: "\f117";
+    content: "\f117";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-007-door:before {
-  content: "\f118";
+    content: "\f118";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-008-stairs:before {
-  content: "\f161";
+    content: "\f161";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-009-interior-design:before {
-  content: "\f11a";
+    content: "\f11a";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-010-wardrobe:before {
-  content: "\f11b";
+    content: "\f11b";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-011-windows:before {
-  content: "\f11c";
+    content: "\f11c";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-012-door-1:before {
-  content: "\f11d";
+    content: "\f11d";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-013-bed:before {
-  content: "\f128";
+    content: "\f128";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-014-bed-1:before {
-  content: "\f12b";
+    content: "\f12b";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-015-interior-design-1:before {
-  content: "\f12c";
+    content: "\f12c";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-016-apartment:before {
-  content: "\f12d";
+    content: "\f12d";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-017-interior-design-2:before {
-  content: "\f12e";
+    content: "\f12e";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
+
 .webextheme-icon-018-french-doors:before {
-  content: "\f12f";
+    content: "\f12f";
+    text-shadow: -1px 0 #F25F29, 0 1px #F25F29, 1px 0 #F25F29, 0 -1px #F25F29;
 }
