--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -7242,6 +7242,7 @@ select {
 @media screen and (max-width: 768px) {
     .about-image-box-style1 .about-image2 {
         margin-left: 45px;
+        width: 90% !important;
     }
 }
 
@@ -7401,6 +7402,7 @@ select {
         margin-left: 50px;
     }
 }
+
 
 .about-image-box-style3 .about-badge1 {
     position: absolute;
@@ -11370,6 +11372,8 @@ select {
         color: var(--footer-text-color);
     }
 }
+
+
 
 
 /*# sourceMappingURL=style.css.map */
