--- a/public/user_assets/css/responsive-rtl.css
+++ b/public/user_assets/css/responsive-rtl.css
@@ -12,17 +12,17 @@
 		padding-top: 110px;
 	}
 	.about-image-box .about-image1 {
-		left: -105px;
+		right: -105px;
 	}
 	.left-infinite-img {
 		margin-bottom: 0;
 	}
 	.divider-gap {
-		padding: 14% 16% 12% 12%;
+		padding: 14% 12% 12% 16%;
 	}
 	.owl-carousel.project-nav .owl-nav button.owl-prev {
-		right: 25%;
-		left: auto;
+		left: 25%;
+		right: auto;
 	}
 }
 @media (max-width: 1200px) {
@@ -33,13 +33,13 @@
 
 @media (max-width: 1024px) {
 	.section-title-left-part {
-		padding-left: 0px;
+		padding-right: 0px;
 	}
 	.icon-box-two {
 		max-width: 650px;
 	}
 	.long-gap-left {
-		margin-left: 0;
+		margin-right: 0;
 	}
 	.divider-gap {
 		padding: 9.5% 5% 8% 5%;
@@ -60,7 +60,7 @@
 		margin-top: 90px;
 	}
 	.mrr-lg-0 {
-		margin-right: 0;
+		margin-left: 0;
 	}
 	.mrb-lg-0 {
 		margin-bottom: 0;
@@ -93,10 +93,10 @@
 		margin-bottom: 110px;
 	}
 	.pdl-lg-0 {
-		padding-left: 0;
+		padding-right: 0;
 	}
 	.pdl-lg-15 {
-		padding-left: 15px;
+		padding-right: 15px;
 	}
 	.pdt-lg-105 {
 		padding-top: 105px;
@@ -148,10 +148,10 @@
 	}
 
 	.owl-carousel.project-nav .owl-nav button.owl-prev {
-		right: 12%;
+		left: 12%;
 	}
 	.owl-carousel.project-nav .owl-nav button.owl-next {
-		right: 5%;
+		left: 5%;
 	}
 }
 @media (max-width: 991px) {
@@ -247,7 +247,7 @@
 		margin-bottom: 60px;
 	}
 	.preloader-wrapper {
-		left: 40%;
+		right: 40%;
 	}
 }
 
@@ -310,22 +310,19 @@
 		margin-top: 60px;
 	}
 	.mrr-md-0 {
-		margin-right: 0;
+		margin-left: 0;
 	}
 	.mrr-md-20 {
-		margin-right: 20px;
+		margin-left: 20px;
 	}
 	.pdt-md-100 {
 		padding-top: 100px;
 	}
-	.pdt-md-170 {
-		padding-top: 170px;
-	}
 	.pdr-md-10 {
-		padding-right: 10px;
+		padding-left: 10px;
 	}
 	.pdl-md-10 {
-		padding-left: 10px;
+		padding-right: 10px;
 	}
 	.pdb-md-0 {
 		padding-bottom: 0;
@@ -408,27 +405,27 @@
 	}
 	.anim-object:before {
 		position: absolute;
-		right: 15%;
+		left: 15%;
 	}
 	.anim-object2:before {
 		height: 200px;
 		width: 200px;
 		top: 40%;
-		left: 20%;
+		right: 20%;
 	}
 	.text-divider .large-text {
 		font-size: 36px;
 		line-height: 1.3;
 	}
 	.preloader-wrapper {
-		left: 36%;
+		right: 36%;
 		top: 42%;
 	}
 	.icon-box-two .icon {
 		float: none;
 	}
 	.icon-box-two .icon-details {
-		margin-left: 0;
+		margin-right: 0;
 		margin-top: 15px;
 	}
 	.about-icon {
@@ -444,11 +441,11 @@
 		display: inline-block;
 	}
 	.blog-single-news .single-news-details .single-news-content .comments-area .comment-list .comment .comment-body .comment-content {
-		margin-left: 0;
+		margin-right: 0;
 		margin-top: 30px;
 	}
 	.blog-single-news .single-news-details .single-news-content .comments-area .comment-list .comment .children {
-		margin-left: 30px;
+		margin-right: 30px;
 	}
 	.blog-single-news .single-news-details .single-news-content .comments-area .comment-list .comment .comment-body .comment-content .comment-text {
 		margin-bottom: 25px;
@@ -491,16 +488,13 @@
 		margin-bottom: 60px;
 	}
 	.mrr-sm-0 {
-		margin-right: 0;
+		margin-left: 0;
 	}
 	.pdt-sm-50 {
 		padding-top: 50px;
 	}
 	.pdt-sm-80 {
 		padding-top: 80px;
-	}
-	.pdt-sm-110 {
-		padding-top: 110px;
 	}
 	.pdb-sm-75 {
 		padding-bottom: 75px;
@@ -530,7 +524,7 @@
 
 @media (max-width: 375px) {
 	.preloader-wrapper {
-		left: 36%;
+		right: 36%;
 		top: 42%;
 	}
 	.anim-object2:before {
